<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app1">SPOTIFY STREAMER</string>
    <string name="app2">SCORES APP</string>
    <string name="app3">LIBRARY APP</string>
    <string name="app4">BUILT IT BIGGER</string>
    <string name="app5">XYZ READER</string>
    <string name="myApp">CAPSTONE: MY APP</string>


</resources>
