<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffc9c8c1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="This Is Sebastian's Portfolio"
            android:id="@+id/textView"
            android:singleLine="false"
            android:layout_gravity="center" />

        <Button
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/app1"
            android:textSize="20dp"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:onClick="but1"
            android:layout_marginTop="5dp" />

        <Button
            android:onClick="but2"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/app2"
            android:textSize="20dp"
            android:id="@+id/button3"
            android:layout_gravity="center"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:layout_marginTop="5dp" />

        <Button
            android:onClick="but3"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/app3"
            android:textSize="20dp"
            android:id="@+id/button2"
            android:layout_gravity="center"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:layout_marginTop="5dp" />

        <Button
            android:onClick="but4"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/app4"
            android:textSize="20dp"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:layout_marginTop="5dp" />

        <Button
            android:onClick="but5"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/app5"
            android:id="@+id/button5"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:layout_marginTop="5dp" />

        <Button
            android:onClick="but6"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/myApp"
            android:id="@+id/button6"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:background="#ff494949"
            android:layout_marginTop="5dp" />


    </LinearLayout>



</RelativeLayout>
